--- a/styles.css
+++ b/styles.css
@@ -854,7 +854,7 @@ footer .cr{
     }
 
     .cardcont{
-        grid-template-columns: repeat(1,25em);
+        grid-template-columns: repeat(1,75vw);
     }
 
     .card1 .imgcont{
